src/test/ui/issue-23544.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-23544.rs:15:17
   |
15 |         where T<Bogus = Self::AlsoBogus>: A;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ associated type not allowed here

error: aborting due to previous error

